// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     tottaling 
    $23,514,141.41
  </h1>
</div>
`;

exports[`should render ExpensesSummary component with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     tottaling 
    $2.35
  </h1>
</div>
`;
